--- a/apps/shopExpress/package.json
+++ b/apps/shopExpress/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "multer": "^1.3.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "serve-favicon": "^2.4.3"
   }
 }
