--- a/apps/shopExpress/package.json
+++ b/apps/shopExpress/package.json
@@ -16,6 +16,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "elastic-builder": "^0.5.0",
     "express": "^4.15.3",
     "multer": "^1.3.0",
     "nodemon": "^1.11.0",
