--- a/apps/shopExpress/package.json
+++ b/apps/shopExpress/package.json
@@ -16,10 +16,14 @@
   "license": "Apache-2.0",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "elasticsearch": "^13.0.1",
     "elastic-builder": "^0.5.0",
     "express": "^4.15.3",
     "multer": "^1.3.0",
     "nodemon": "^1.11.0",
+    "hjs": "~0.0.6",
+    "json2csv": "^3.7.3",
+    "morgan": "~1.8.1",
     "serve-favicon": "^2.4.3"
   }
 }
