--- a/apps/jeymartECommerce/package.json
+++ b/apps/jeymartECommerce/package.json
@@ -22,6 +22,7 @@
     "elasticsearch": "^14.0.0",
     "express": "^4.16.2",
     "nodemon": "^1.12.5",
+    "serve-favicon": "^2.4.5",
     "vue": "^2.5.9",
     "vue-router": "^3.0.1"
   },
