--- a/apps/nycTaxiHub/package.json
+++ b/apps/nycTaxiHub/package.json
@@ -18,6 +18,7 @@
   "author": "jason.wong@elastic.co",
   "license": "Apache-2.0",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "elastic-builder": "^1.1.3",
     "elasticsearch": "^14.0.0",
     "express": "^4.16.2",
@@ -29,6 +30,4 @@
   "devDependencies": {
     "vueify": "^9.4.1"
   }
-
 }
-
